--- a/_posts/2024-03-28-#4.md
+++ b/_posts/2024-03-28-#4.md
@@ -2,9 +2,7 @@
 layout: single
 title:  "이 일기 읽어보시고 피해입지 마시길"
 ---
-![우땨땨](images/example.jpg)
-![좋은 사람과 좋은 시간...](.images/post_img)
-![륜이 메뉴](images/example.jpg)
+![KakaoTalk_20240328_233435869](../images/2024-03-28-#4/KakaoTalk_20240328_233435869-1711641107637-5.jpg)
 
 #저 쓴다면 쓰는 여자입니다
 피파 맛잇당 ♡
