--- a/_posts/2024-03-28-#4.md
+++ b/_posts/2024-03-28-#4.md
@@ -2,7 +2,17 @@
 layout: single
 title:  "이 일기 읽어보시고 피해입지 마시길"
 ---
-![KakaoTalk_20240328_233435869](../images/2024-03-28-#4/KakaoTalk_20240328_233435869-1711641491079-7.jpg)
+
+
+
+
+
+
+ [2024-03-28-#4](..\images\2024-03-28-#4)
+
+
+
+
 
 #저 쓴다면 쓰는 여자입니다
 피파 맛잇당 ♡
